ingresamos la estructura del header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <title>Proyecto1</title>
 </head>
 <body>
-  <p>Proyecto 1 prueba de Git</p>
+  
+  <div class="container">
+    <div id="header">
+      Esta es la cabecera
+    </div>
+    <div id="post">
+      <h1>SCADA POWER ELECTRONICS</h1>
+      Este es el cuerpo del proyecto del post
+      <p>Los sistemas escada permiten monitorear y controlar procesos de </p>
+    </div>
+  </div>
 </body>
 </html>
