--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   
   <div class="container">
     <div id="header">
-      Esta es la cabecera
+      Esta es la cabecera <br>
+      <span id="tagline">Tu blog de cabecera</span>
     </div>
     <div id="post">
       <h1>SCADA POWER ELECTRONICS</h1>
-      Este es el cuerpo del proyecto del post
-      <p>Los sistemas escada permiten monitorear y controlar procesos de </p>
+      <p>Este es el cuerpo del proyecto del post</p> 
+      <p>Los sistemas scada permiten monitorear y controlar procesos de </p>
+      <p>Suscribete y dale like</p>
     </div>
   </div>
 </body>
