Haciendo la descripción del post

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div id="post">
       <h1>SCADA POWER ELECTRONICS</h1>
       Este es el cuerpo del proyecto del post
-      <p>Los sistemas escada permiten monitorear y controlar procesos de </p>
+      <p>Los sistemas escada permiten monitorear y controlar procesos de sistemas industriales mediante diferente protocolos </p>
+      <p>De igual forma existe hardware que permite la adquisición de datos llamados sensores y el tomar acciones de control llamados atuadores</p>
     </div>
   </div>
 </body>
