--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   
   <div class="container">
     <div id="header">
+      <img src="images/dragon.png" alt="logo" id="logo">
       Esta es la cabecera <br>
       <span id="tagline">Tu blog de cabecera</span>
     </div>
