--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <div class="container">
     <div id="header">
       <img src="images/dragon.png" alt="logo" id="logo">
-      Esta es la cabecera <br>
-      <span id="tagline">Tu blog de cabecera</span>
+        ACME ECUADOR <br>
+      <span id="tagline">Soluciones de Infraestructura</span>
     </div>
     <div id="post">
       <h1>SCADA POWER ELECTRONICS</h1>
       
-      <p>Los sistemas escada permiten monitorear y controlar procesos de sistemas industriales mediante diferente protocolos </p>
-      <p>De igual forma existe hardware que permite la adquisición de datos llamados sensores y el tomar acciones de control llamados atuadores</p>
+      <p>Los sistemas SCADA permiten el monitoreo y control de procesos de sistemas industriales mediante diferente protocolos </p>
+      <p>De igual forma existe hardware que permite la adquisición de datos llamados sensores y el tomar acciones de control llamados actuadores</p>
       <p id="suscribete">Suscríbete y dale like</p> 
     </div>
     <div id="footer">
