Tildes con entiddes HTML

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="post">
       <h1>SCADA POWER ELECTRONICS</h1>
       
-      <p>Los sistemas SCADA permiten el monitoreo y control de procesos de sistemas industriales mediante diferente protocolos </p>
+      <p>Los sistemas SCADA permiten el monitoreo y control de procesos de sistemas industriales mediante diferente protocolos de comunicai&oacute;</p>
       <p>De igual forma existe hardware que permite la adquisición de datos llamados sensores y el tomar acciones de control llamados actuadores</p>
       <p id="suscribete">Suscríbete y dale like</p> 
     </div>
