--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   
   <div class="container">
     <div id="header">
-      <img src="images/dragon.png" alt="logo" id="logo">
-        ACME ECUADOR <br>
+      <img src="images/dragon.png" alt="logo" id="logo"> ACME   COORP ECUADOR  <br>
       <span id="tagline">Soluciones de Infraestructura</span>
     </div>
     <div id="post">
