--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
-  <title>Hyperblog SCADA</title>
+  <title>Hyperblog SCADA AND CONTROL</title>
 </head>
 <body>
   
