--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/mobile.css">
+  <link rel="stylesheet" href="css/grid.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/animation.css">
   <title>AUTOMATION BLOG</title>
 </head>
 <body>
   <!-- Aqui comienza el navbar -->
-  <nav class="nav">
+  <nav class="nav fadeInDown">
     <div class="brandImage">
       <img src="./images/logo.png" alt="logo">
     </div>
@@ -23,16 +26,19 @@
         <li><a href="seccion-pedidos">pedidos</a></li>
       </ul>
     </div>
-  </nav>
+  </nav >
   <!-- Aqui termina el navbar -->
-  <div id="header">
-    <img src="images/dragon.png" alt="logo" id="logo"> ACME   COORP ECUADOR  <br>
-    <span id="tagline">Soluciones de Infraestructura</span>
+  <div id="header" class="fadeIn">
+    <img src="images/dragon.png" alt="logo" id="logo">
+    ACME   COORP ECUADOR  <br>
+    <span id="tagline" >
+      Soluciones de Infraestructura
+    </span>
   </div>
   <!-- Aqui inicia la sección de productos -->
 <div class="products">
     <!-- PRODUCTO 1-->
-    <div class="product">
+    <div class="product fadeInUp">
       <div class="productContent">
         <div class="img_container">
           <img src="images/box1.png" alt="img1">
@@ -43,7 +49,7 @@
       </div>
     </div>
     <!-- PRODUCTO 2 -->
-      <div class="product">
+      <div class="product fadeInUp">
         <div class="productContent">
           <div class="img_container">
             <img src="images/box2.png" alt="img1">
