Se incorporan los enlaces internos

--- a/ventas.html
+++ b/ventas.html
@@ -20,10 +20,10 @@
     </div>
     <div class="navOptions">
       <ul>
-        <li><a href="seccion-productos">productos</a></li>
-        <li><a href="seccion-contacto">contacto</a></li>
-        <li><a href="seccion-inicio">inicio</a></li>
-        <li><a href="seccion-pedidos">pedidos</a></li>
+        <li><a href="#seccion-productos">productos</a></li>
+        <li><a href="#seccion-contacto">contacto</a></li>
+        <li><a href="index.html">inicio</a></li>
+        <li><a href="#seccion-pedidos">pedidos</a></li>
       </ul>
     </div>
   </nav >
@@ -55,6 +55,13 @@
                         <input type="text" name="phone" placeholder="" class="moduloPagoInput">
                         <br>
                         <input type="submit" value="Confirmar Pago" class="mainButton" name="submit">
+
+                        <!-- <input type="hidden" name="first_name" value="John">
+                        <input type="hidden" name="nigth_phone_a" value="610">
+                        <input type="hidden" name="email" value="jdoe@zyzzyu.com"> -->
+                        
+                        
+
                     </form>
                 </div
         </div>
